--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container container-inner-page">
@@ -116,16 +116,18 @@
                 <a class="form-result-hotels-button-brown" href="#">Забронировать</a>
               </div>
             </div>
-            <div class="form-result-hotels-stars">
-              <div class="stars">
-                <span class="icon-star"></span>
-                <span class="icon-star"></span>
-                <span class="icon-star"></span>
-                <span class="icon-star"></span>
-              </div>
-              </div>
+            <div class="form-result-hotels-spec">
+              <div class="form-result-hotels-stars">
+                <div class="stars">
+                  <span class="icon-star"></span>
+                  <span class="icon-star"></span>
+                  <span class="icon-star"></span>
+                  <span class="icon-star"></span>
+                </div>
+                </div>
               <div>
               <p class="form-result-hotels-rating">Рейтинг: 8,5</p>
+              </div>
             </div>
           </article>
 
@@ -144,15 +146,17 @@
                 <a class="form-result-hotels-button-brown" href="#">Забронировать</a>
               </div>
             </div>
-            <div class="form-result-hotels-stars">
-              <div class="stars">
-                <span class="icon-star"></span>
-                <span class="icon-star"></span>
-                <span class="icon-star"></span>
+            <div class="form-result-hotels-spec">
+              <div class="form-result-hotels-stars">
+                <div class="stars">
+                  <span class="icon-star"></span>
+                  <span class="icon-star"></span>
+                  <span class="icon-star"></span>
+                </div>
+                </div>
+                <div>
+                <p class="form-result-hotels-rating">Рейтинг: 8,9</p>
               </div>
-              </div>
-              <div>
-              <p class="form-result-hotels-rating">Рейтинг: 8,9</p>
             </div>
           </article>
 
@@ -171,14 +175,16 @@
                 <a class="form-result-hotels-button-brown" href="#">Забронировать</a>
               </div>
             </div>
-            <div class="form-result-hotels-stars">
-              <div class="stars">
-                <span class="icon-star"></span>
-                <span class="icon-star"></span>
+            <div class="form-result-hotels-spec">
+              <div class="form-result-hotels-stars">
+                <div class="stars">
+                  <span class="icon-star"></span>
+                  <span class="icon-star"></span>
+                </div>
               </div>
-            </div>
-              <div>
-              <p class="form-result-hotels-rating">Рейтинг: 9,2</p>
+                <div>
+                <p class="form-result-hotels-rating">Рейтинг: 9,2</p>
+              </div>
             </div>
           </article>
 
