--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -138,7 +138,8 @@
         </section>
         <section class="map">
           <h2 class="visually-hidden">Карта Седоны</h2>
-          <img class="map-img" src="img/map.png" alt="Карта Седоны" width="1200" height="594">
+          <!--<img class="map-img" src="img/map.png" alt="Карта Седоны" width="1200" height="594">-->
+          <iframe class="map-img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d564474.505247366!2d-112.00279115033129!3d34.87271362170046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1462035967330" allowfullscreen=""></iframe>
         </section>
 
 
@@ -175,5 +176,6 @@
       <!--footer end-->
       </div>
       <!--container end-->
+      <script src="js/script.min.js"></script>
     </body>
 </html>
