--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -169,6 +169,6 @@
       <!--footer end-->
       </div>
       <!--container end-->
-      <script src="js/script.js"></script>
+      <script src="js/script.min.js"></script>
     </body>
 </html>
