--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container container-inner-page">
@@ -94,8 +94,8 @@
             <li><a href="#">По рейтингу</a></li>
           </ul>
           <ul class="triangle-wrapper">
-              <li><a href="#" class="triangle"><svg class="triangle-up" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg></a></li>
-              <li><a href="#" class="triangle"><svg class="triangle-down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11 10"><path d="M5.5 10L0 0h11"/></svg></a></li>
+              <li><a href="#" class="triangle"><svg class="triangle-up" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg></a><span class="visually-hidden">По возрастанию</span></li>
+              <li><a href="#" class="triangle"><svg class="triangle-down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11 10"><path d="M5.5 10L0 0h11"/></svg></a><span class="visually-hidden">По убыванию</span></li>
           </ul>
         </section>
 
@@ -119,6 +119,7 @@
             <div class="form-result-hotels-spec">
               <div class="form-result-hotels-stars">
                 <div class="stars">
+                  <span class="visually-hidden">4 звезды</span>
                   <span class="icon-star"></span>
                   <span class="icon-star"></span>
                   <span class="icon-star"></span>
@@ -149,6 +150,7 @@
             <div class="form-result-hotels-spec">
               <div class="form-result-hotels-stars">
                 <div class="stars">
+                  <span class="visually-hidden">3 звезды</span>
                   <span class="icon-star"></span>
                   <span class="icon-star"></span>
                   <span class="icon-star"></span>
@@ -178,6 +180,7 @@
             <div class="form-result-hotels-spec">
               <div class="form-result-hotels-stars">
                 <div class="stars">
+                  <span class="visually-hidden">2 звезды</span>
                   <span class="icon-star"></span>
                   <span class="icon-star"></span>
                 </div>
